update unit test

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=DemoService;User ID=sa;Password=Abcd1234;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Default": "Data Source=PM307-GV\\MSSQLSERVER2019;Initial Catalog=DemoService;User ID=sa;Password=Abcd1234;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
